--- a/index.html
+++ b/index.html
@@ -10,21 +10,27 @@
         <h1>Processing project by Francesco Mattia Atzeri</h1>
         <script type="text/processing">
 
-            // Write your project here
-            
-            // Example
-            void setup() {
-              size(200, 200);
-              background(255);
-            }
-            void draw(){
-                pushMatrix();
-                translate(100, 100);
-                rotate(radians(frameCount * 2  % 360));
-                rect(0, 0, 80, 5);
-                popMatrix();
-            }
-            
+void setup() 
+{
+  size(400,400);
+  background(255);
+}
+
+void draw()
+{
+  pushMatrix();
+  translate(200, 200);
+  scale(1.1);
+  rotate(radians(frameCount * 20 % 360));
+  
+  fill(frameCount * 50%255, frameCount * 80%255, frameCount * 7%255);
+  rect(20, 20, 5, 20, 5, 5, 0, 0);
+  rect(15, 40, 15, 5, 5);
+  quad(20, 43, 20, 95, 25, 110, 25, 43);
+  
+  popMatrix();
+}
+
         </script>
         <canvas></canvas>
     </body>
